[gd_scene load_steps=4 format=3 uid="uid://dpgvq3khht8ys"]

[ext_resource type="Script" path="res://Scripts/grass.gd" id="1_221kh"]
[ext_resource type="Texture2D" uid="uid://v34ahm4qgcrm" path="res://World/Grass.png" id="1_853ci"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_luep8"]
size = Vector2(13, 14)

[node name="Grass" type="Node2D"]
script = ExtResource("1_221kh")

[node name="Grass" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("1_853ci")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 17
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7.5, 8)
shape = SubResource("RectangleShape2D_luep8")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
